# rice

./: .gitignore  aa.md
backend/: .env.example  .env.test.example  .gitignore  README.md  README_ENV.md  TEST_PLAN.md  pyproject.toml  requirements.txt  restart_server.sh  start_server.sh  stop_server.sh  test_dict_api.sh  test_menu_api.sh
backend/alembic/: env.py
backend/alembic/versions/: 25753b260180_add_departments_table.py  4ca356db0472_add_role_custom_dept_ids_and_.py  51079b45a694_add_auth_models.py  597f7ddd950d_change_user_id_to_bigint_in_log_tables.py  800c7f8c34e6_add_menus_table.py  add_dict_tables.py  add_remark_to_permissions.py  (+4 more)
backend/app/: main.py
backend/docs/: API_CURL_TEST.md  API_DOCUMENTATION.md  BEST_PRACTICES.md  DATABASE_DESIGN.md  DEPARTMENT_CACHE_GUIDE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN.md  FORM_ID_FIX_REPORT.md  FRONTEND_ID_MIGRATION_REPORT.md  ID_FIX_SUMMARY.md  ID_GENERATION_ANALYSIS.md  ID_GENERATION_STRATEGY.md  ID_SERIALIZATION_GUIDE.md  MIGRATION_FIELD_CHECK.md  QUICK_REFERENCE.md  README.md  USER_VALIDATION_AUDIT.md  openapi.json
backend/scripts/: add_dict_menu.py  add_dict_permissions.py  assign_role_to_user.py  check_missing_fields.py  check_tables.py  clear_permissions_roles.py  init_data.py  seed_departments.py  seed_menus.py  seed_roles_permissions.py  seed_users.py  test_insert_log.py  verify_logs.py
backend/tests/: conftest.py  manual_api_test.py  manual_module_test.py  test_exception_handler.py  test_i18n.py  test_password_policy.py  test_single_session.py  test_snowflake_integration.py
frontend/: .gitignore  (+7 more)
(+165 files in other folders)
